# smart_gnomad_downloader

./: .gitignore  Cargo.toml  README.md  gnomadv3_urls_download.csv  gnomadv4_urls_download.csv  test.bed
src/: main.rs
